Se añade logo a la pagina junto con el icon de la pestaña del navegador, se realizan cambios menores en el texto de la sección del Hero

--- a/html/index.html
+++ b/html/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeartDev</title>
+    <title>DeartDev.</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-color_icono_pag.png">
+
 </head>
 <body>
     <!-- Encabezado con navegación -->
     <header>
-        <h1>DeartDev</h1>
+        <h1>DeartDev.</h1>
         <nav>
             <ul>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
@@ -22,9 +24,15 @@
 
     <!-- Sección Hero -->
     <section id="hero">
-        <h2>Desarrollador Web | Laravel | PWA</h2>
-        <p>Innovación y estrategia en cada línea de código.</p>
+        <div class="hero-container">
+            <img src="/images/logo-color_icono_nombre.png" alt="Logo" class="hero-logo">
+            <div class="hero-texto">
+                <h2>Desarrollador FullStack</h2>
+                <p>Construyendo soluciones digitales eficientes y modernas.</p>
+            </div>
+        </div>
     </section>
+
 
     <!-- Sobre mí -->
     <section id="sobre-mi">
